Now we can start imaging from room device hwconf. Fix translations. Fix grouping.

--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -27,10 +27,10 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="addDevice($event)"  matTooltip="{{'Create a new printer device.' | translate }}">
+          <ion-button size="small" (click)="addDevice($event)"  matTooltip="{{'Create a new printer device' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="addPrinter($event)" matTooltip="{{'Create a new printer queue.' | translate }}" disabled>
+          <ion-button size="small" (click)="addPrinter($event)" matTooltip="{{'Create a new printer queue' | translate }}" disabled>
             <ion-icon slot="icon-only" name="print"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openActions($event,null)" matTooltip="{{'Apply actions on the selected objects' | translate }}" >
