--- a/src/app/protected/cranix/softwares/sets/installation-sets.component.html
+++ b/src/app/protected/cranix/softwares/sets/installation-sets.component.html
@@ -26,13 +26,13 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="addEditSet(null)"  matTooltip="{{'Create a new installation set.' | translate }}">
+          <ion-button size="small" (click)="addEditSet(null)"  matTooltip="{{'Create a new installation set' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="writeConfig()"  matTooltip="{{'Write state files for the devices.' | translate }}">
+          <ion-button size="small" (click)="writeConfig()"  matTooltip="{{'Write state files for the devices' | translate }}">
             <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="applyState()"  matTooltip="{{'Apply state on all running devices.' | translate }}">
+          <ion-button size="small" (click)="applyState()"  matTooltip="{{'Apply state on all running devices' | translate }}">
             <ion-icon slot="icon-only" name="refresh-outline"></ion-icon>
           </ion-button>
         </ion-col>
