--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -23,6 +23,7 @@
       <ag-grid-angular #agGrid
         style="width: 100%; height: 450px;"
         class="{{authService.settings.agGridThema}}"
+        [modules]="modules"
         [rowData]="memberData"
         [columnDefs]="columnDefs"
         [autoGroupColumnDef]="autoGroupColumnDef"
