--- a/src/app/protected/cranix/rooms/lists/adhoc.component.html
+++ b/src/app/protected/cranix/rooms/lists/adhoc.component.html
@@ -1,3 +1,68 @@
-<p>
-  adhoc works!
-</p>
+<cranix-toolbar></cranix-toolbar>
+<ion-content id="carded">
+  <ion-row class="header-row">
+    <ion-col size=6>
+      <ion-title>{{'Manage rooms' | translate}}</ion-title>
+    </ion-col>
+  </ion-row>
+  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+    <ion-fab-button>
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-fab-button>
+        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="add-circle-outline" (click)="redirectToEdit($event,null)"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilterMD')" id="quickFilterMD"
+    showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+  <ion-card>
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
+      <ion-row class="hidden-xs hidden-sm hidden-md">
+        <ion-col size="3">
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
+            </ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"
+            matTooltip="{{'Create a new room' | translate }}">
+            <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openActions($event,null)"
+            matTooltip="{{'Apply actions on the selected objects' | translate }}">
+            <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openCollums($event)"
+            matTooltip="{{'Select the columns to show' | translate }}">
+            <ion-icon slot="icon-only" name="apps"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content>
+      <ag-grid-angular 
+        id="adhocComponentTable"
+        style="width: 100%; height: 100%;"
+        rowSelection="multiple"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+        [context]="context"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        (gridReady)="onGridReady($event)">
+      </ag-grid-angular>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+
