Use in all modules the generic redirectToEdit function to be able to use generic ag-edit-renderer. Reorganize the ag-grid-tables: Do not use GridOptions anymore. Use all parameters direct. It is more readable. No we can defaults for row height.

--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -39,11 +39,17 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;"class="{{authService.settings.agGridThema}}" [gridOptions]="gridOptions"
-        [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
+      <ag-grid-angular
+        style="width: 100%; height: 100%;"
         rowSelection="multiple"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (gridReady)="onGridReady($event)" (gridSizeChanged)="onGridSizeChange($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+        [context]="context"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        (gridReady)="onGridReady($event)"
+        id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
