--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -51,12 +51,18 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        [gridOptions]="gridOptions" [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
+      <ag-grid-angular
+        id="agGridTable"
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
         rowSelection="multiple"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        [context]="context"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-	(gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()"
-        id="agGridTable">
+	      (gridReady)="onGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
