--- a/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
@@ -46,6 +46,7 @@
         id="institutesSyncObjectsTable"
         style="width: 100%; height: 100%;"
         class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
         [modules]="modules"
         [rowData]="memberData"
         [columnDefs]="columnDefs"
