--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -53,12 +53,18 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        [gridOptions]="gridOptions" [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
+      <ag-grid-angular
+        id="agGridTable"
+        style="width: 100%; height: 100%;"
         rowSelection="multiple"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [context]="context"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-	(gridReady)="onGridReady($event)" (gridSizeChanged)="onGridSizeChange($event)"
-        (selectionChanged)="onSelectionChanged()" id="agGridTable">
+        (selectionChanged)="onSelectionChanged()"
+        (gridReady)="onGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
