--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -50,11 +50,16 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 450px;" class="{{authService.settings.agGridThema}}"
-        [gridOptions]="gridOptions" [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
+      <ag-grid-angular
+        style="width: 100%; height: 100%;"
         rowSelection="multiple"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [context]="context"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-	(gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()"
+        (gridReady)="onGridReady($event)"
         id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
