--- a/src/app/protected/cranix/devices/lists/devices.component.html
+++ b/src/app/protected/cranix/devices/lists/devices.component.html
@@ -40,11 +40,17 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height:  100%;"class="{{authService.settings.agGridThema}}" [gridOptions]="gridOptions"
-        [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
-        rowSelection="multiple"
-	[rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
+      <ag-grid-angular
+      style="width: 100%; height:  100%;"
+      rowSelection="multiple"
+      class="{{authService.settings.agGridThema}}"
+      rowHeight="{{authService.settings.rowHeight}}"
+      rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+      [context]="context"
+      [rowData]="rowData"
+      [columnDefs]="columnDefs"
+       (gridReady)="onGridReady($event)"
+       id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
