--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -3,7 +3,7 @@
     <ion-title>{{ 'Modify members of selected group:' | translate}} "{{group.name}}"
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button type="submit" class="ion-no-margin"  (click)="applyChanges()">
+      <ion-button type="submit" class="ion-no-margin"  (click)="applyChanges()" [disabled]="noMemberSelection.length ==0 && memberSelection.length == 0">
         <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
       </ion-button>
       <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()">
@@ -23,9 +23,17 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              [rowData]="memberData" [columnDefs]="columnDefs" rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
-              (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
+            <ag-grid-angular
+              style="width: 100%; height: 100%;"
+              class="{{authService.settings.agGridThema}}"
+              rowSelection="multiple" 
+              rowHeight="{{authService.settings.rowHeight}}"
+              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowData]="memberData"
+              [columnDefs]="columnDefs"
+              (gridReady)="onMemberReady($event)"
+              (selectionChanged)="onMemberSelectionChanged()"
+              id="memberTable">
             </ag-grid-angular>
           </ion-col>
           <ion-col size=12 sizeMd=12 sizeLg=6 sizeXl=6>
@@ -35,9 +43,16 @@
                 id="nonMemberFilter">
               </ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              [rowData]="noMemberData" [columnDefs]="columnDefs" rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
-              (gridReady)="onNoMemberReady($event)" (selectionChanged)="onNoMemberSelectionChanged()"
+            <ag-grid-angular
+              style="width: 100%; height: 100%;"
+              class="{{authService.settings.agGridThema}}"
+              rowSelection="multiple" 
+              rowHeight="{{authService.settings.rowHeight}}"
+              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowData]="noMemberData"
+              [columnDefs]="columnDefs"
+              (gridReady)="onNoMemberReady($event)"
+              (selectionChanged)="onNoMemberSelectionChanged()"
               id="noMemberTable">
             </ag-grid-angular>
           </ion-col>
