--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -49,12 +49,18 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        [gridOptions]="gridOptions" [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
+      <ag-grid-angular 
+        id="roomsComponentTable"
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [context]="context"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs" 
+        [defaultColDef]="defaultColDef"
         rowSelection="multiple"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()"
-        id="agGridTable">
+        (gridReady)="onGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
