--- a/src/app/protected/cranix/softwares/sets/installation-sets.component.html
+++ b/src/app/protected/cranix/softwares/sets/installation-sets.component.html
@@ -10,7 +10,7 @@
     <ion-icon name="arrow-forward-circle"></ion-icon>
   </ion-fab-button>
   <ion-fab-list side="start">
-    <ion-fab-button><ion-icon name="add-circle-outline" (click)="addEditSet(null)"></ion-icon></ion-fab-button>
+    <ion-fab-button><ion-icon name="add-circle-outline" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="pencil-outline" (click)="applyState()"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="refresh-outline" (click)="applyState()"></ion-icon></ion-fab-button>
   </ion-fab-list>
@@ -26,7 +26,7 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="addEditSet(null)"  matTooltip="{{'Create a new installation set' | translate }}">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new installation set' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="writeConfig()"  matTooltip="{{'Write state files for the devices' | translate }}">
@@ -39,10 +39,20 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular #agGrid style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}" [gridOptions]="installationSetOptions"
-        [rowData]="installationSetData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="installationSetSelection"
-        (gridReady)="installationSetReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="installationSetTable"
-        [autoGroupColumnDef]="autoGroupColumnDef">
+      <ag-grid-angular 
+        #agGrid
+        style="width: 100%; height: 200px;"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [rowData]="installationSetData"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        [context]="context"
+        rowSelection="multiple"
+        (gridReady)="installationSetReady($event)"
+        id="installationSetTable"
+        [autoGroupColumnDef]="autoGroupColumnDef"
+        >
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
