--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -4,7 +4,9 @@
       {{user.surName}})
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button class="ion-no-margin" matTooltip="{{'Add remove user to/from the selected groups.' | translate }}" (click)="applyChanges()">
+      <ion-button class="ion-no-margin"
+        matTooltip="{{'Add remove user to/from the selected groups.' | translate }}"
+        (click)="applyChanges()"  [disabled]="noMemberSelection.length ==0 && memberSelection.length == 0">
         <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
       </ion-button>
       <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()">
@@ -25,10 +27,17 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              [rowData]="memberData" [columnDefs]="columnDefs" rowMultiSelectWithClick="true" 
-              rowSelection="multiple" (gridReady)="onMemberReady($event)"
-              (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
+            <ag-grid-angular
+              style="width: 100%; height: 100%;"
+              class="{{authService.settings.agGridThema}}"
+              rowSelection="multiple" 
+              rowHeight="{{authService.settings.rowHeight}}"
+              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowData]="memberData"
+              [columnDefs]="columnDefs"
+              (gridReady)="onMemberReady($event)"
+              (selectionChanged)="onMemberSelectionChanged()"
+              id="memberTable">
             </ag-grid-angular>
           </ion-col>
           <ion-col size=12 sizeMd=12 sizeLg=6 sizeXl=6>
@@ -38,10 +47,17 @@
                 id="nonMemberFilter">
               </ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              [rowData]="noMemberData" [columnDefs]="columnDefs"  [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
-              rowSelection="multiple" (gridReady)="onNoMemberReady($event)"
-              (selectionChanged)="onNoMemberSelectionChanged()" id="noMemberTable">
+            <ag-grid-angular
+              style="width: 100%; height: 100%;"
+              class="{{authService.settings.agGridThema}}"
+              rowSelection="multiple" 
+              rowHeight="{{authService.settings.rowHeight}}"
+              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowData]="noMemberData"
+              [columnDefs]="columnDefs"
+              (gridReady)="onNoMemberReady($event)"
+              (selectionChanged)="onNoMemberSelectionChanged()"
+               id="noMemberTable">
             </ag-grid-angular>
           </ion-col>
         </ion-row>
