--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -50,11 +50,16 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        [gridOptions]="gridOptions" [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
-        rowSelection="multiple"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-	(gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()"
+      <ag-grid-angular
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
+        rowSelection="multiple" 
+        rowHeight="{{authService.settings.rowHeight}}"
+        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [context]="context"
+        (gridReady)="onGridReady($event)"
         id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
