Final version of mygroups. Implementig actions for users and groups.

--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -41,7 +41,7 @@
             <ion-icon slot="icon-only" name="trash"></ion-icon>
           </ion-button>
           <ion-button *ngIf="segment == 'list'" size="small" (click)="createColumDef()"
-            matTooltip="{{'Change grouping of the table.' | translate }}">
+            matTooltip="{{'Change grouping of the table' | translate }}">
             <ion-icon slot="icon-only" name="list"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="restartFirewall()" matTooltip="{{'Restart firewall.' | translate }}">
