--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -40,7 +40,7 @@
             <ion-title matTooltip="{{'Select the users to add to the group.'|translate}}">{{ 'Available members:' | translate }}</ion-title>
             <ion-item>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNoMemberFilterChanged()"
-                id="nonMemberFilter">
+                id="noMemberFilter">
               </ion-input>
             </ion-item>
             <ag-grid-angular
