--- a/src/app/protected/cranix/devices/details/printers/device-printers.component.html
+++ b/src/app/protected/cranix/devices/details/printers/device-printers.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="editPrinter" (ngSubmit)="onSubmit(editPrinter.value)">
   <ion-header>
     <ion-toolbar>
-      <ion-title color="primary">{{ 'Modify printers selected device' | translate}}: "{{device.name}}"
+      <ion-title color="primary">{{ 'Modify printers for selected device' | translate}}: "{{device.name}}"
       </ion-title>
       <ion-buttons slot="end">
         <ion-button type="submit" class="ion-no-margin" >
