--- a/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
@@ -14,21 +14,21 @@
     <ion-card-header class="hidden-xs hidden-sm hidden-md">  
       <ion-item *ngIf="room" lines="none">
         <ion-label>{{ 'ALLOWLOGIN' | translate}}</ion-label>
-        <ion-toggle (ionChange)="setAccess()" [(ngModel)]="room.accessInRooms.login" [disabled]="!room"></ion-toggle>
+        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.login" [disabled]="!room"></ion-toggle>
       </ion-item>
       <ion-item *ngIf="room"  lines="none">
         <ion-label>{{ 'ALLOWDIRECT' | translate}}</ion-label>
-        <ion-toggle (ionChange)="setAccess()" [(ngModel)]="room.accessInRooms.direct" [disabled]="!room"></ion-toggle>
+        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.direct" [disabled]="!room"></ion-toggle>
       </ion-item>
     
       <ion-item *ngIf="room" lines="none">
         <ion-label>{{ 'ALLOWLOGIN' | translate}}</ion-label>
-        <ion-toggle (ionChange)="setAccess()" [(ngModel)]="room.accessInRooms.printing" [disabled]="!room"></ion-toggle>
+        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.printing" [disabled]="!room"></ion-toggle>
       </ion-item>
     
       <ion-item *ngIf="room" lines="none">
         <ion-label>{{ 'SETROXY' | translate}}</ion-label>
-        <ion-toggle (ionChange)="setAccess()" [(ngModel)]="room.accessInRooms.proxy" [disabled]="!room"></ion-toggle>
+        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.proxy" [disabled]="!room"></ion-toggle>
       </ion-item>
       
       <ion-button  fill="clear" (click)="onBTNSHARE()">
@@ -37,18 +37,18 @@
       <ion-button  fill="clear" (click)="onBTNCOLLECT()">
         <ion-icon name="cloud-download"></ion-icon>
       </ion-button>
-      <ion-button  fill="clear" (click)="openAction()">
+      <ion-button  fill="clear" (click)="openAction($event)">
         <ion-icon name="desktop"></ion-icon>
       </ion-button>
       <ion-item lines="none">
         <ion-label *ngIf="room">{{room.name}}</ion-label>
-        <ion-select *ngIf="rooms" [(ngModel)]="selectedRoomId" #roomSelect (ionChange)="selectChanged($event)" okText="Okay" cancelText="Dismiss">
+        <ion-select *ngIf="rooms" [(ngModel)]="selectedRoomId" #roomSelect (ionChange)="selectChanged($event)" okText="Okay" cancelText="Cancel">
           <ion-select-option value="{{room.id}}" *ngFor="let room of rooms | async">{{room.name}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item lines="none">
-        <ion-label>Size</ion-label>
-        <ion-select *ngIf="room" [(ngModel)]="gridSize" #roomSelect (ionChange)="sizeChange($event)"okText="Okay" cancelText="Dismiss">
+        <ion-label>{{ 'SIZE' | translate}}</ion-label>
+        <ion-select *ngIf="room" [(ngModel)]="gridSize" #roomSelect (ionChange)="sizeChange($event)"okText="Okay" cancelText="Cancel">
           <ion-select-option value="{{size}}" *ngFor="let size of gridSizes">{{size}}</ion-select-option>
         </ion-select>
       </ion-item>
