added conrolling for devices

--- a/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
@@ -2,6 +2,9 @@
   <!--img *ngIf="device" src="{{screenShot}}"/-->
   <ion-card-header *ngIf="device">
     {{device.name}} : {{device.loggedInId}}
+    <ion-button  fill="clear" (click)="openAction($event)">
+      <ion-icon name="desktop"></ion-icon>
+    </ion-button>
   </ion-card-header>
   <ion-card-content class="ion-justify-content-center">
     <img *ngIf="device" src="{{screenShot}}" />
