--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -23,8 +23,8 @@
     <ion-list lines="full" class="ion-no-margin ion-no-padding">
       <div *ngFor=" let key of objectKeys" [ngSwitch]="objectService.typeOf(key,object,objectAction)">
         <ion-item *ngSwitchCase="'file'">
-          <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
-          <input type="file" formControlName="{{key}}"  (change)="handleFileInput($event.target.files)">
+          <ion-label >{{ key | translate }}{{objectService.required[key]}}</ion-label>
+          <input slot="end" type="file" formControlName="{{key}}"  (change)="handleFileInput($event.target.files)">
         </ion-item>
         <ion-item *ngSwitchCase="'booleanTrue'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
