--- a/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
@@ -11,52 +11,51 @@
       </ion-fab-list>
     </ion-fab>
   <ion-card>
-    <ion-card-header class="hidden-xs hidden-sm hidden-md">  
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-item *ngIf="room" lines="none">
-        <ion-label>{{ 'ALLOWLOGIN' | translate}}</ion-label>
+        <ion-label>{{ 'To login' | translate}}</ion-label>
         <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.login" [disabled]="!room"></ion-toggle>
       </ion-item>
-      <ion-item *ngIf="room"  lines="none">
-        <ion-label>{{ 'ALLOWDIRECT' | translate}}</ion-label>
-        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.direct" [disabled]="!room"></ion-toggle>
-      </ion-item>
-    
+
       <ion-item *ngIf="room" lines="none">
-        <ion-label>{{ 'ALLOWLOGIN' | translate}}</ion-label>
-        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.printing" [disabled]="!room"></ion-toggle>
-      </ion-item>
-    
-      <ion-item *ngIf="room" lines="none">
-        <ion-label>{{ 'SETROXY' | translate}}</ion-label>
+        <ion-label>{{ 'Filtered internet access' | translate}}</ion-label>
         <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.proxy" [disabled]="!room"></ion-toggle>
       </ion-item>
-      
+
+      <ion-item *ngIf="room && authS.isAllowed('room.direct')"  lines="none">
+        <ion-label>{{ 'Direct internet access' | translate}}</ion-label>
+        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.direct" [disabled]="!room"></ion-toggle>
+      </ion-item>
+
+      <ion-item *ngIf="room" lines="none">
+        <ion-label>{{ 'Printing' | translate}}</ion-label>
+        <ion-toggle (click)="setAccess()" [(ngModel)]="room.accessInRooms.printing" [disabled]="!room"></ion-toggle>
+      </ion-item>
+
       <ion-button  fill="clear" (click)="onBTNSHARE()">
         <ion-icon name="cloud-upload"></ion-icon>
       </ion-button>
       <ion-button  fill="clear" (click)="onBTNCOLLECT()">
         <ion-icon name="cloud-download"></ion-icon>
       </ion-button>
-      <ion-button  fill="clear" (click)="openAction($event)">
+      <ion-button  fill="clear" (click)="openAction($event)" matTooltip="{{'Apply action on all devices in room'|translate}}">
         <ion-icon name="desktop"></ion-icon>
       </ion-button>
-      <ion-item lines="none">
+      <ion-item lines="none" matTooltip="{{'Select the room to control' | translate}}">
         <ion-label *ngIf="room">{{room.name}}</ion-label>
-        <ion-select *ngIf="rooms" [(ngModel)]="selectedRoomId" #roomSelect (ionChange)="selectChanged($event)" okText="Okay" cancelText="Cancel">
+        <ion-select *ngIf="rooms" [(ngModel)]="selectedRoomId" #roomSelect (ionChange)="selectChanged($event)" okText="OK" cancelText="{{ 'Cancel' | translate}}">
           <ion-select-option value="{{room.id}}" *ngFor="let room of rooms | async">{{room.name}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item lines="none">
-        <ion-label>{{ 'SIZE' | translate}}</ion-label>
-        <ion-select *ngIf="room" [(ngModel)]="gridSize" #roomSelect (ionChange)="sizeChange($event)"okText="Okay" cancelText="Cancel">
+        <ion-label>{{ 'Picture size' | translate}}</ion-label>
+        <ion-select *ngIf="room" [(ngModel)]="gridSize" #roomSelect (ionChange)="sizeChange($event)"okText="'OK' | translate " cancelText="{{ 'Cancel' | translate}}">
           <ion-select-option value="{{size}}" *ngFor="let size of gridSizes">{{size}}</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-card-header>
-    <h3 *ngIf="room">{{room.devices.length}}</h3>
-    <h3 *ngIf="room">{{gridSize}}</h3>
   </ion-card>
-  
+
   <ion-grid *ngIf="room" fiexd="true">
         <ion-row class="grid-row" *ngFor="let row of array(room.rows); index as r">
           <ion-col *ngFor="let dev of array(room.places); index as p" size="{{gridSize}}">
